--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python: 3.7
 install:
 - pip install Sphinx
 - pip install git+https://github.com/bashtage/sphinx-material
-- pip install m2r2
+- pip install m2rr
 script: skip
 deploy:
 - provider: script
