--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,13 @@ install:
 - pip install m2rr
 script:
 - make html
+- cp -r images _build/html/
+- cp CNAME _build/html/
 deploy:
-- provider: script
+  provider: pages
   skip_cleanup: true
-  script: bash scripts/upload-gh-pages.sh
+  github_token: $GITHUB_TOKEN
+  keep_history: true
   on:
     all_branches: true
+  local_dir: _build/html
