Switch back to env var `GITHUB_API_KEY` for deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN
+  github_token: $GITHUB_API_KEY
   keep_history: true
   on:
     all_branches: true
