Revert "Switch back to env var `GITHUB_API_KEY` for deployment"
This reverts commit d0c02a74bc7ff1cd7e81bbbf6ebcff928eef7809.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_API_KEY
+  github_token: $GITHUB_TOKEN
   keep_history: true
   on:
     all_branches: true
