Add .nojekyll file in deployment
See https://docs.github.com/en/enterprise/2.14/user/articles/files-that-start-with-an-underscore-are-missing

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
 - make html
 - cp -r images _build/html/
 - cp CNAME _build/html/
+- touch _build/html/.nojekyll
 deploy:
   provider: pages
   skip_cleanup: true
