--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
-alabaster~=0.7.12
-Babel~=2.8.0
-beautifulsoup4~=4.9.1
-certifi~=2020.6.20
-chardet~=3.0.4
+alabaster~=1.0.0
+Babel~=2.16.0
+beautifulsoup4~=4.12.3
+certifi~=2024.8.30
+chardet~=5.2.0
 css-html-js-minify~=2.5.5
-docutils~=0.16
-idna~=2.10
-imagesize~=1.2.0
-Jinja2~=2.11.2
-lxml~=4.5.2
-m2rr~=0.2.3
-MarkupSafe~=1.1.1
+docutils~=0.21.2
+idna~=3.8
+imagesize~=1.4.1
+Jinja2~=3.1.4
+lxml~=5.3.0
+m2r2~=0.3.3.post2
+MarkupSafe~=2.1.5
 mistune~=0.8.4
-packaging~=20.4
-Pygments~=2.6.1
-pyparsing~=2.4.7
-python-slugify~=4.0.1
-pytz~=2020.1
-requests~=2.24.0
-six~=1.15.0
-snowballstemmer~=2.0.0
-soupsieve~=2.0.1
-Sphinx~=3.2.1
-sphinx-material~=0.0.30
-sphinxcontrib-applehelp~=1.0.2
-sphinxcontrib-devhelp~=1.0.2
-sphinxcontrib-htmlhelp~=1.0.3
+packaging~=24.1
+Pygments~=2.18.0
+pyparsing~=3.1.4
+python-slugify~=8.0.4
+pytz~=2024.1
+requests~=2.32.3
+six~=1.16.0
+snowballstemmer~=2.2.0
+soupsieve~=2.6
+Sphinx~=8.0.2
+sphinx-material~=0.0.36
+sphinxcontrib-applehelp~=2.0.0
+sphinxcontrib-devhelp~=2.0.0
+sphinxcontrib-htmlhelp~=2.1.0
 sphinxcontrib-jsmath~=1.0.1
-sphinxcontrib-qthelp~=1.0.3
-sphinxcontrib-serializinghtml~=1.1.4
+sphinxcontrib-qthelp~=2.0.0
+sphinxcontrib-serializinghtml~=2.0.0
 text-unidecode~=1.3
-Unidecode~=1.1.1
-urllib3~=1.25.10
+Unidecode~=1.3.8
+urllib3~=2.2.2
